--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,10 @@
     
     "rules":{
       "@typescript-eslint/no-unused-vars":"off",
-      "react-hooks/exhaustive-deps": "off"
+      "react-hooks/exhaustive-deps": "off",
+      "react/prop-types": "off",
+      "react/react-in-jsx-scope": "off",
+      "@typescript-eslint/prefer-as-const": "off"
     },
     
     "settings": {
